# paper-namager

./: .gitignore  KB_README.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.local.json.example  postCreate.sh  postStart.sh
.github/: pull_request_template.md
.github/workflows/: site.yml
.streamlit/: config.toml
ai/: rag.py
backend/: main.py
data/: manifest.csv  vocab.yaml
docs/: spec.md
notes/: 2025-smith-multiagent-x.md  unknown-2306-08302v3.md
paper_notes/: __init__.py  review.py
reviews/: README.md  review-custom.md  review-multi-agent-2025.md
scripts/: add_paper.ps1  generate_review.py  paper_sync.py
site/: mkdocs.yml
tags/: debate.md  evaluation.md  multi-agent.md  retrieval.md  rlhf.md  safety.md
ui/: app.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
