[project]
name = "paper-notes"
version = "0.1.0"
description = "Paper notes + scripts + review generator"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  # Docs
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  # Optional: for abstract extraction in review generation
  "pypdf>=4.2.0",
  # UI
  "streamlit>=1.36.0",
  # AI optional (RAG skeleton)
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "chromadb>=0.5.5",
  # Backend API for React app
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[tool.uv]
# This project isn't an installable package; just manage deps via uv
package = false
dev-dependencies = []
